force-app/main/default/objects/Service_Section_Field__c/Service_Section_Field__c.object-meta.xml
<CustomObject>
    <label>Service Section Field</label>
    <nameField>
        <label>Service Section Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Section Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>