force-app/main/default/objects/Service_Section_Field__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>