force-app/main/default/objects/Service_Section_Field__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <description>Comma-separated list of picklist values (e.g., "Option1,Option2,Option3")</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>