force-app/main/default/objects/Service_Section_Field__c/fields/Service_Section__c.field-meta.xml
<CustomField>
    <fullName>Service_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Section</label>
    <referenceTo>Service_Section__c</referenceTo>
    <relationshipLabel>Service Section Fields</relationshipLabel>
    <relationshipName>Service_Section_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>